RESOLVED FIXED46354
[EFL] Fix warnings during build
https://bugs.webkit.org/show_bug.cgi?id=46354
Summary [EFL] Fix warnings during build
Lucas De Marchi
Reported 2010-09-23 08:10:29 PDT
[EFL] Fix warnings during build
Attachments
Patch (3.96 KB, patch)
2010-09-23 08:14 PDT, Lucas De Marchi
no flags
Patch (3.98 KB, patch)
2010-09-23 09:29 PDT, Lucas De Marchi
no flags
Lucas De Marchi
Comment 1 2010-09-23 08:14:24 PDT
WebKit Review Bot
Comment 2 2010-09-23 08:15:34 PDT
Attachment 68521 [details] did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style']" exit_code: 1 WebKit/efl/ChangeLog:9: Line contains tab character. [whitespace/tab] [5] WebKit/efl/ChangeLog:10: Line contains tab character. [whitespace/tab] [5] WebKit/efl/ChangeLog:14: Line contains tab character. [whitespace/tab] [5] Total errors found: 3 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Lucas De Marchi
Comment 3 2010-09-23 09:29:28 PDT
Created attachment 68528 [details] Patch New patch removing the tab characters
Csaba Osztrogonác
Comment 4 2010-09-23 09:52:20 PDT
Comment on attachment 68528 [details] Patch LGTM, r=me
Lucas De Marchi
Comment 5 2010-09-23 09:57:02 PDT
Comment on attachment 68528 [details] Patch Clearing flags on attachment: 68528 Committed r68154: <http://trac.webkit.org/changeset/68154>
Lucas De Marchi
Comment 6 2010-09-23 09:57:11 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.