WebKit/efl/ewk/ewk_frame.h
@@ -160,7 +160,7 @@ EAPI unsigned int ewk_frame_text_matches_mark(Evas_Object *o, const char *string
 EAPI Eina_Bool    ewk_frame_text_matches_unmark_all(Evas_Object *o);
 EAPI Eina_Bool    ewk_frame_text_matches_highlight_set(Evas_Object *o, Eina_Bool highlight);
 EAPI Eina_Bool    ewk_frame_text_matches_highlight_get(const Evas_Object *o);
-EAPI Eina_Bool    ewk_frame_text_matches_nth_pos_get(Evas_Object *o, int n, int *x, int *y);
+EAPI Eina_Bool    ewk_frame_text_matches_nth_pos_get(Evas_Object *o, size_t n, int *x, int *y);
 
 EAPI Eina_Bool    ewk_frame_stop(Evas_Object *o);
 EAPI Eina_Bool    ewk_frame_reload(Evas_Object *o);
